fix bug in css not showing single gifs

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 @media (max-width: 550px) {
   .gif-grid {
-    grid-template-columns: min-content;
+    grid-template-columns: auto;
   }
 
 }
